엘라스틱서치 집계 쿼리 테스트 코드작성